# forty-two-watts

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.updater  Makefile  README.md  config.example.minimal.yaml  config.example.yaml  docker-compose.yml
.github/workflows/: release.yml  rpi-image-build.yml  rpi-preview-cleanup.yml  test.yml
deploy/: forty-two-watts.service
docs/: api.md  architecture.md  clamping.md  development.md  driver-catalog.md  host-api.md  mpc-planner.md  nova-integration.md  operations.md  plan-ems-contract.md  self-update.md  site-convention.md
docs/blog/: 2026-04-week-one.md
docs/setup-guide/: README.md  de.md  en.md  es.md  fr.md  sv.md
drivers/: deye.lua  easee_cloud.lua  ferroamp.lua  ferroamp_modbus.lua  fronius.lua  fronius_smart_meter.lua  goodwe.lua  growatt.lua  huawei.lua  kostal.lua  pixii.lua  pixii_pv.lua  sdm630.lua  sma.lua  sofar.lua  solaredge.lua  solaredge_pv.lua  solis.lua  sonnen.lua  sungrow.lua  tesla_vehicle.lua  victron.lua  zap.lua
drivers-wasm/: sungrow.wasm
go/: go.mod  go.sum
scripts/: deploy-go.sh  install.sh  release.sh
src/: api.rs  config.rs  control.rs  ha.rs  main.rs  state.rs  telemetry.rs
src/lua/: json.rs  mod.rs  runtime.rs  sandbox.rs
src/modbus/: mod.rs  tcp.rs
src/mqtt/: client.rs
wasm-drivers/sungrow/: Cargo.toml
web/: app.js  diagnose.js  index.html  legacy.html  models.js  next-app.js  next.css  next.html  plan.js  settings.js  setup.html  setup.js  style.css  twins.js  update-badge.js
(+170 files in other folders)
