[package]
name = "home-ems"
version = "0.1.0"
edition = "2024"
description = "Unified Home Energy Management System - coordinates multiple battery systems on a shared grid connection"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tiny_http = "0.12"
redb = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"
pid = "4"
